--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
 .main-card-hover{
   transition: 200ms;
   overflow: hidden;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .main-card-hover img{
