main images are changed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,8 @@
 }
 
 .bg-main-img{
-  background: url(../assets/images/main.jpg);
+  background: url(../assets/images/main-3.JPG);
+  background-position: right;
   background-size: cover;
 }
 
